# holiday_workshop

./: set_env.sh
01-MCP-Files-Testing/01-starter/: mcp_server.py  pyproject.toml  test_mcp.py
01-MCP-Files-Testing/02-solution/: pyproject.toml  test_mcp.py
02-Vibe-Coding-ADK-Agent/01-starter/: agent.py  mcp_server.py
02-Vibe-Coding-ADK-Agent/02-solution/root_agent/: agent.py
03-Connect-ADK-MCP-UI/01-starter/backend/: agent.py  main.py
03-Connect-ADK-MCP-UI/01-starter/frontend/components/: TreeStar.tsx
03-Connect-ADK-MCP-UI/02-solution/: .gitignore
03-Connect-ADK-MCP-UI/02-solution/backend/: main.py
03-Connect-ADK-MCP-UI/02-solution/frontend/: package.json
03-Connect-ADK-MCP-UI/02-solution/frontend/components/: Ornaments.tsx  UIOverlay.tsx
03-Connect-ADK-MCP-UI/02-solution/frontend/src/: App.tsx  index.css
03-Connect-ADK-MCP-UI/02-solution/frontend/src/components/: TreeScene.tsx
04-Adding-Memory-Bank/01-starter/: use_memory_bank.sh
04-Adding-Memory-Bank/01-starter/backend/: agent.py  main.py  mcp_server.py  pyproject.toml
04-Adding-Memory-Bank/01-starter/frontend/src/components/: ChatInterface.tsx
04-Adding-Memory-Bank/02-solution/backend/: README.md  main.py  mcp_server.py
04-Adding-Memory-Bank/02-solution/frontend/: vite.config.ts
04-Adding-Memory-Bank/02-solution/frontend/components/: Experience.tsx
04-Adding-Memory-Bank/02-solution/frontend/src/: App.tsx
04-Adding-Memory-Bank/02-solution/frontend/src/components/: ChatInterface.tsx
