[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "google-adk>=1.18.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "fastmcp",
    "google-genai",
    "pillow",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
